# cake-bake-app

./: .env  .gitignore  README.md  pyproject.toml
src/cake-bake-app/: config.py  db.py
src/cake_bake_app/: __init__.py  __main__.py  api.py  app.py  config.py  db.py  html.py  model.py  models.py  ping.py  process.py  template.py
src/cake_bake_app/templates/: add_employee.html  cake_preferences.html  cake_responsibility.html  form_submission.js  home_page.html  show_cake_responsibility.html  styles.css  submit_preferences.html  test.html
tests/: conftest.py  test_api.py
