[tool.poetry]
name = "cake-bake-app"
version = "0.1.0"
description = ""
authors = ["Viswadeep Sarangi <viswadeep.sarangi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
SQLAlchemy = "^1.4.40"
SQLAlchemy-Utils = "*"
fastapi = "^0.79.1"
pandas = "^1.4.3"
numpy = "^1.23.2"
python-dotenv="*"
uvicorn = "0.15.*"

[tool.poetry.dev-dependencies]
pytest="*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
